--- a/css/tailwind/src/css/custom/_magicbox.scss
+++ b/css/tailwind/src/css/custom/_magicbox.scss
@@ -97,5 +97,8 @@
 .grid .swiper [data-magicbox] picture{
     height: 100%;
 }
+.grid .swiper{
+    display: none;
+}
 
 
